--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Product Previews",
+  "name": "Shopify Product Previews",
   "description": "Get Shopify Product Previews in a dev theme",
   "version": "1.0",
   "manifest_version": 2,
