--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
   "permissions": [
     "webRequest",
     "webRequestBlocking",
+    "notifications",
     "*://*.shopifypreview.com/*",
     "*://*/*"
   ]
